# compiler-design

./: .gitignore  README.md  l1c.cabal  run.sh
app/: Compile.hs
app/Compile/: AST.hs  Asm.hs  GraphColoring.hs  IR.hs  Lexer.hs  Liveness.hs  Parser.hs  RegAlloc.hs  Semantic.hs  X86.hs
app/Compile/Backend/: Asm.hs  Schedule.hs  X86.hs
app/Compile/Backend/X86/: Instruction.hs  Register.hs  X86.hs
app/Compile/Frontend/: AST.hs  Lexer.hs  Parser.hs  Semantic.hs
app/Compile/IR/: ControlFlow.hs  GraphColoring.hs  GraphConstructor.hs  IR.hs  IRGraph.hs  Liveness.hs  RegAlloc.hs  SSA.hs
app/Compile/IR/Optimize/: CleanupOptimizer.hs  ConstantFolding.hs  Optimizer.hs
app/Compile/Semantic/: BreakContinueAnalysis.hs  ForAnalysis.hs  IntegerAnalysis.hs  LivenessAnalysis.hs  NameAnalysis.hs  ReturnAnalysis.hs  Semantic.hs  Traverse.hs  TypeAnalysis.hs  Util.hs  VariableAnalysis.hs
