cabal-version:      3.0
name:               l1c
version:            0.1.0.0

synopsis: Simple toy compiler
description: This was developed for the lecture 'Compiler Design' in the summer term 2025 by AndreÌ Platzer at KIT Karlsruhe

author:             Darius Schefer
maintainer:         darius.schefer@student.kit.edu

build-type:         Simple

common warnings
    ghc-options: -Wno-missing-signatures -Wno-unused-top-binds

executable l1c
    import:           warnings
    main-is:          Main.hs
    build-depends:
                  base >= 4.15 && < 5,
                  containers,
                  directory,
                  filepath,
                  megaparsec >= 9.7.0,
                  mtl,
                  optparse-applicative >= 0.18.1.0,
                  parser-combinators,
                  transformers,
                  text
    other-modules:
                  Args,
                  Compile,
                  Compile.Frontend.AST,
                  Compile.Frontend.Parser,
                  Compile.Frontend.Lexer,
                  Compile.Semantic.Semantic,
                  Compile.Semantic.BreakContinueAnalysis,
                  Compile.Semantic.ForAnalysis,
                  Compile.Semantic.IntegerAnalysis,
                  Compile.Semantic.NameAnalysis,
                  Compile.Semantic.ReturnAnalysis,
                  Compile.Semantic.Traverse,
                  Compile.Semantic.TypeAnalysis,
                  Compile.Semantic.VariableAnalysis,
                  Compile.Semantic.Util,
                  Compile.IR.SSA,
                  Compile.IR.IRGraph,
                  Compile.IR.ControlFlow,
                  Compile.IR.GraphConstructor,
                  Compile.IR.RegAlloc,
                  Compile.IR.Optimize.CleanupOptimizer,
                  Compile.IR.Optimize.ConstantFolding,
                  Compile.IR.Optimize.Optimizer,
                  Compile.Backend.Schedule,
                  Compile.Backend.Asm,
                  Compile.Backend.X86.X86,
                  Compile.Backend.X86.Register,
                  Compile.Backend.X86.Instruction,
                  Error
    hs-source-dirs:   app
    default-language: Haskell2010
